styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Nunito:wght@200;300;400;600;700&family=Roboto:wght@400;500;700&display=swap');

:root{
  --black:#192a56;
  --light-color:#666;
  --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
  --uno-1: #d6e9ff;
  --uno-2: #88b4e7;
  --uno-3: #5d8cc0;
  --uno-4: #586f89;
  --uno-5: #444c55;
  --duo-1: #34febb;
  --duo-2: #32ae85;
  --duo-3: #42675a;
  --green: #A2CCB6;
  --yellow: #FCEEB5;
  --peach: #EE786E;
  --off-white: #FFFFF4;
}
*{
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  text-decoration: none;
  outline: none; border: none;
  -webkit-transition: all .1s linear;
  -o-transition: all .1s linear;
  transition: all .1s linear;
  list-style-type: none;
  font-family: 'Nunito', sans-serif;
}
a{
  color: var(--uno-3);
}

html,body{
  width: 100%;
  height: 100%;
  background-color: #152238;
  position: relative;
  color: var(--duo-1);
  
}

.container{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.main{
  width: 70vw;
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  position: relative;
  margin-right: 3rem;
}
/* header section */
.header{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  width: 100%;
  height: 10vh;
  padding: 20px;
  margin-top: 1rem;
  color: var(--duo-1);
}
.left-header{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.left-header img{
  width: 100%;
  height: 5vh;
  -o-object-fit: contain;
     object-fit: contain;
}
.left-header h3{
  font-size: 1.8rem;
  width: 100%;
  margin: 0 5px;
}

.right-header{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-column-gap: 2rem;
     -moz-column-gap: 2rem;
          column-gap: 2rem;
  margin-right: 2rem;
}
.right-header i{
  font-size: 1.3rem;
}

/* setting container */
.setting-container{
  width: 40vw;
  padding: 10px;
  background: var(--uno-5);
  margin-top: 2rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  border-radius: 5px;
}
.setting-container div div:hover{
  cursor: pointer;
  color: var(--duo-1);
}

.left-setting,
.middle-setting,
.right-setting{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  font-size: .9rem;
  font-weight: 700;
  width: 100%;
  border-right: 4px solid var(--duo-2);
  padding: 0 7px;
  color: var(--uno-2);
}
.right-setting{
  border: none;
}
.active-opt{
  color: var(--duo-1);
}

/* text section */

.text-section{
  width: 60vw;
  height: 28vh;
  margin-top: 2rem;
  font-size: 2.4rem;
  font-weight: 600;
  text-align: center;
  position: relative;
}

.modal{
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 8vh;
  color: var(--uno-3);
  background-color: #152238;
  z-index: 100000;
  margin-bottom: 2rem;
  left: 0;
}
.speed{
  color: var(--uno-2);
  font-size: 1.5rem;
  font-weight: 700;
  position: absolute;
  left: 28vw;
  bottom: 50vh;
}
.acuracy{
  color: var(--uno-2);
  font-size: 1.5rem;
  font-weight: 700;
  position: absolute;
  right: 31vw;
  bottom: 50vh;
}
.timer{
  color: var(--uno-2);
  font-size: 1.5rem;
  font-weight: 700;
  position: absolute;
  left: 47vw;
  bottom: 50vh;
}


.hide{
  display: none;
  z-index: -1000;
}
.text-section div{
  display: inline;
}

.current{
  background-color: var(--duo-1);
  color: #152238;
}
.correct{
  color: var(--uno-3);
}
.wrong{
  color: #ff6961;
}
/* keyboard */

span {
  display: block;
  margin-top: -5px;
}

.keyboard {
  margin: 0px auto;
  border: 3px solid var(--uno-2);
  border-radius: 10px;
  padding: 10px;
}

.keys-row {
  margin-top: 2px;
  overflow: hidden;
}

.key {
  width: 50px;
  height: 50px;
  float: left;
  cursor: pointer;
  color: var(--uno-1);
  border: 2px solid var(--uno-2);
  line-height: 48px;
  text-align: center;
  margin-left: 2px;
  border-radius: 4px;
}
.active{
  background-color: var(--uno-2);
  color: #152238;
  font-weight: bold;
}
.key__symbols {
  line-height: 28px;
}

.key__delete {
  width: 100px;
}

.key__oneandhalf {
  width: 75px;
}


.key__enter {
  width: 112px;
}

.key__caps {
  width: 90px;
}

.key__shift-left {
  width: 100px;
}

.key__spacebar {
  width: 300px;
}

.key__bottom-funct {
  width: 70px;
}


.feather {
  margin-top: 10px;
}
/* footer */
.footer{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  width: 100%;
  height: 6vh;
  padding: 1rem 3rem;
  margin-top: 1rem;
  position: absolute;
  bottom: 0;
  font-size: 1.2rem;
  color: var(--uno-4);
  font-weight: 700;
}
.left-footer{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-column-gap: 1rem;
     -moz-column-gap: 1rem;
          column-gap: 1rem;
  cursor: pointer;
}
.right-footer{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-column-gap: 1rem;
     -moz-column-gap: 1rem;
          column-gap: 1rem;
  cursor: pointer;
}

/* shortcut section */
.shortcut-display{
  position: absolute;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  font-size: 1rem;
  font-weight: 700;
  color: var(--uno-4);
  -webkit-column-gap: 1rem;
     -moz-column-gap: 1rem;
          column-gap: 1rem;
  bottom: 5vh;
}
.button-con{
  padding: .5rem;
  background-color: var(--uno-4);
  color: #152238;
}

/* warning */
.device-warning{
  width: 100vw;
  height: 100vh;
  position: absolute;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  background: #152238;
  display: none;
  padding: 4rem;
}
.device-warning h1{
  font-size: 4rem;
  rotate: -90deg;
}
.device-warning p{
  width: 50vw;
  font-size: 2rem;
}


/* sidebar */
.sidebar{
  height: 80vh;
  width: 15vw;
  position: absolute;
  right: 0;
  top: 9vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border: 1px solid var(--uno-5);
}
.logo-col{
  width: 100%;
  height: 8rem;
  border-bottom: 1px solid var(--uno-5);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.logo-col p{
  font-size: 1.7rem;
  font-weight: 700;
  color: var(--uno-1);
  margin-left: 1rem;
}
.logo-col img{
  width: 100%;
  height: 100%;
  -o-object-fit: contain;
     object-fit: contain;
  aspect-ratio: 1/1;
  margin-right: 10px;
}
.col{
  width: 100%;
  padding: 1rem 3rem;
  font-size: 1.3rem;
  border-bottom: 1px solid var(--uno-5);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: baseline;
      -ms-flex-align: baseline;
          align-items: baseline;
  -webkit-column-gap: 1rem;
     -moz-column-gap: 1rem;
          column-gap: 1rem;
  color: var(--uno-1);
}
.col i{
  font-size: 1.5rem;
}

@media (max-width: 1600px){
  .setting-container{
    width: 45vw;
  }
  .logo-col p{
  font-size: 1.4rem;
  }
  .col i{
  font-size: 1.3rem;
  }
  .logo-col img{
    display: none;
  }
  .setting-container{
    width: 50vw;
  }
  
}
@media (max-width: 1200px) {
  .device-warning{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .modal{
    display: none;
    z-index: -10000;
  }
}
@media (max-height: 850px) {
  .shortcut-display {
    left: -5vw;
    bottom: 50vh;
    rotate: 270deg;
  }
  .text-section{
    margin-top: .5rem;
    font-size: 1.5rem;
  }
  .setting-container{
    margin-top: .5rem;
  }
  .speed{
    left: 28vw;
    bottom: 50vh;
  }
  .acuracy{
    right: 31vw;
    bottom: 50vh;
  }
  .timer{
    left: 45%;
    bottom: 54vh;
  }
}
@media (max-height: 640px) {
  .device-warning{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .modal{
    display: none;
    z-index: -10000;
  }
}
@media (max-width: 500px){
  .device-warning h1{
    font-size: 3rem;
  }
  .device-warning p{
    width: 30vw;
    font-size: 1.5rem;
  }
}

